STYLE: Remove CMake-language block-end command arguments
Ancient versions of CMake required else(), endif(), and similar block
termination commands to have arguments matching the command starting the block.
This is no longer the preferred style.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,9 +35,9 @@ if(NOT SETIFEMPTY)
     set(VALUE ${ARGV1})
     if(NOT ${KEY})
       set(${KEY} ${VALUE})
-    endif(NOT ${KEY})
-  endmacro(SETIFEMPTY KEY VALUE)
-endif(NOT SETIFEMPTY)
+    endif()
+  endmacro()
+endif()
 
 SETIFEMPTY(INSTALL_RUNTIME_DESTINATION bin)
 
